# azan-api

./: .env.example  README.md  pyproject.toml  requirements.txt  script.py
app/: config.py  database.py  dependencies.py  main.py  security.py
app/api/v1/endpoints/: auth.py  location.py  prayer.py  user.py
app/models/: location.py  prayer.py  user.py
app/schemas/: location.py  prayer.py  user.py
app/scripts/: database.py
