[project]
name = "azan-api"
version = "0.1.0"
description = "A FastAPI-based Azan prayer times API with SQLite"
authors = [
    {name = "Insaf Nilam",email = "insafnilam.2000@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "bcrypt (==4.0.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
